--- a/cav-ui-mock-input/speedyawadjust.kv
+++ b/cav-ui-mock-input/speedyawadjust.kv
@@ -7,7 +7,7 @@
     on_speed: InputHandler.update_input('speed', self.speed)
     on_yaw_rate: InputHandler.update_input('yaw_rate', self.yaw_rate)
     SliderInput:
-        labeltext: 'speed'
+        labeltext: 'Speed'
         labelwidth: 80
         value_min: 0
         value_max: 220
@@ -16,7 +16,7 @@
         height:50
         size_hint_y: None
     SliderInput:
-        labeltext: 'Yaw rate\nyaw_rate'
+        labeltext: 'Yaw Rate'
         labelwidth: 80
         value_min: -180
         value_max: 180
