--- a/cav-ui-mock-input/laneplot.kv
+++ b/cav-ui-mock-input/laneplot.kv
@@ -1,3 +1,8 @@
+#:kivy 1.10.0
+
 <LanePlot>
-    BoxLayout:
-        orientation: 'vertical'
+    cols: 2
+    Image:
+        source: ''
+    Image:
+        source: ''
